infra/k8s/api-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: -api
  labels:
    app: -api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: -api
  template:
    metadata:
      labels:
        app: -api
    spec:
      containers:
      - name: api
        image: -api:latest
        ports:
        - containerPort: 80
