infra/k8s/web-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: -web
  labels:
    app: -web
spec:
  replicas: 1
  selector:
    matchLabels:
      app: -web
  template:
    metadata:
      labels:
        app: -web
    spec:
      containers:
      - name: web
        image: -web:latest
        ports:
        - containerPort: 80
