infra/k8s/api-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: -api
spec:
  selector:
    app: -api
  ports:
  - port: 80
    targetPort: 80
  type: ClusterIP
