infra/k8s/web-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: -web
spec:
  selector:
    app: -web
  ports:
  - port: 80
    targetPort: 80
  type: ClusterIP
